<resources>
    <string name="app_name">SnackTrack</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Log in</string>
    <string name="welcome_message">Welcome to SnackTrack</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Log in</string>
    <string name="create_new_account">Or create a new account.</string>
    <string name="title_activity_new_account">New Account</string>
    <string name="password_confirm_hint">Confirm password</string>
    <string name="signup">Sign up</string>
    <string name="existing_account">Or log in to existing account</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="action_logout">Log out</string>
    <string name="radio_group_text">Pick user type:</string>
    <string name="radio_button_dietitian">Dietitian</string>
    <string name="radio_button_patient">Patient</string>

    <string-array name="main_drawer_items">
        <item>My Snacks</item>
        <item>My Clients</item>
        <item>Settings</item>
        <item>Chat</item>
    </string-array>

    <string-array name="main_drawer_items_2">
        <item>My Snacks</item>
        <item>Settings</item>
        <item>Chat</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string name="upload">Upload</string>
    <string name="uploading">Uploading...</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_new_entry">New Snack</string>
    <string name="default_spinner_item">Select an option</string>
    <string-array name="meal_types">
        <item>@string/default_spinner_item</item>
        <item>A snack</item>
        <item>A drink</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string-array name="meal_location">
        <item>@string/default_spinner_item</item>
        <item>Home</item>
        <item>Fast Food</item>
        <item>Restaurant</item>
        <item>Friend\'s house</item>
    </string-array>
    <string name="title_activity_edit_text">EditTextActivity</string>
    <string name="title_activity_edit_description">Edit Description</string>
    <string name="action_done">Done</string>
    <string name="edit_description_hint">No Description</string>
    <string name="no_barcode_data">No barcode data</string>
    <string name="description_label">Description</string>
    <string name="title_activity_main">SnackTrack</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">WELCOME TO \nSNACKTRACK</string>
    <string name="title_activity_snack_details">Snack Details</string>
    <string name="title_activity_image_viewer">Image Viewer</string>

    <!-- Settings strings -->
    <string name="password_text">Change Password</string>
    <string name="warn_dialog_title">Are you sure you want to remove your Dietitian?</string>
    <string name="warn_dialog_message">Your Dietitian will no longer be able to access your entries.</string>
    <string name="dietitian_username_status">You have not picked a Dietitian yet</string>
    <string name="pick_diet_text">Pick My Dietitian</string>
    <string name="dietitian_picker">Choose your Dietitian from the list!</string>
    <string name="rem_diet_text">Remove My Dietitian</string>
    <string name="msg_diet_text">Send Message To My Dietitian</string>
    <string name="change_password_text">Change Account Password</string>
    <string name="change_email_text">Change Account Email</string>
    <string name="my_dietitian_text">My Dietitian</string>
    <string name="change_font_size_text">Change Font Size</string>
    <string name="settings_group_1">Account Settings</string>
    <string name="diet_set_group_1">My Dietitian Options</string>
    <string name="settings_group_2">Other Settings</string>
    <string name="new_password_text">Enter new password:</string>
    <string name="new_password_tip">(Password cannot be blank)</string>
    <string name="password_edittext">New password</string>
    <string name="submit_text">Submit</string>
    <string name="cancel_text">Cancel</string>
    <string name="new_email_text">Enter new email:</string>
    <string name="email_edittext">Click here</string>
    <string name="email_submit">SUBMIT</string>
    <string name="scan_data_hint">Barcode Data</string>

    <string name="search_text">Search dietitians:</string>
    <string name="search_edittext">Dietitian\'s username</string>
    <string name="dietitian_search_submit">Search</string>
    <string name="dietitian_search_cancel">Cancel</string>

    <string name="scan">Scan</string>

    <!-- Chat strings -->
    <string name="chat_to">to:&#160;</string>
    <string name="chat_from">from:&#160;</string>
    <string name="chat_send">Send</string>
    <string name="chat_message_hint">Enter message</string>
    <string name="chat_enter_user_hint">Enter username</string>
    <string name="chat">Chat</string>
    <string name="chat_with">Chat with:&#160;</string>
    <string name="recent_message">Recent message:&#160;</string>


    <string name="edit_item">Edit</string>
    <string name="delete_item">Delete</string>
    <string name="save_button">Save</string>

    <string name="previous_entries_help_title">
        Welcome to SnackTrack!
    </string>
    <string name="previous_entries_help_message">
        It looks like you don\'t have any snack entries yet. This screen is where you will see all
        of your entries once you add some. To add your first entry, tap the add (+)
        button at the top right of the screen.
    </string>

    <string name="refresh_account_instructions">
        If SnackTrack\'s database structure ever changes and/or your dietitian cannot see your
        entries, you may need to refresh your account. You can do that here. You will keep all
        of your existing entries, but you will need to rechoose your dietitian.
    </string>

    <string name="browse_my_exports_instructions">
        You can use a file explorer app to navigate to your exports folder. Your exports may be
        found in this folder:\n\n
    </string>

    <string name="browse_other_exports_instructions">
        You are currently viewing another user\'s entries. Exports you make for this user may be
        found in this folder:\n\n
    </string>

     <string name="password_req_text">
         Your password must: use a lowercase letter, an uppercase letter, a number, and have at
         least 8 characters.
    </string>

</resources>
