<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/loginRootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:focusableInTouchMode="true"
        tools:context=".login.LoginActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:id="@+id/loginWelcomeTextView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="12pt"
            android:ellipsize="end"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameEditText"
            android:hint="@string/username_hint"
            android:singleLine="true"
            android:layout_below="@+id/loginWelcomeTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="81dp"
            android:inputType="textNoSuggestions" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/passwordEditText"
            android:singleLine="true"
            android:hint="@string/password_hint"
            android:layout_below="@+id/usernameEditText" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/signInButton"
            android:layout_below="@+id/passwordEditText"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:id="@+id/createNewAccountLink"
            android:layout_below="@+id/signInButton"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:id="@+id/forgotPasswordLink"
            android:layout_below="@+id/createNewAccountLink"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />


    </RelativeLayout>

</ScrollView>
