<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="edu.sc.snacktrack.NewAccountActivity"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/newAccountRootView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_message"
            android:id="@+id/welcomeTextView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="10pt"
            android:textColor="#000000"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameEditText"
            android:layout_below="@+id/welcomeTextView"
            android:layout_marginTop="40dp"
            android:hint="@string/username_hint"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:singleLine="true"
            android:inputType="textNoSuggestions" />

        <TextView
            android:id="@+id/usernameErrorStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameEditText"
            android:textColor="#FF0000"
            tools:text="isValid?" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:layout_below="@+id/usernameErrorStatus"
            android:layout_centerHorizontal="true"
            android:hint="@string/password_hint"
            android:layout_marginTop="10dp"
            android:inputType="textPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/passwordConfirmEditText"
            android:hint="@string/password_confirm_hint"
            android:inputType="textPassword"
            android:layout_below="@+id/passwordEditText"
            android:layout_alignRight="@+id/passwordMatchStatus" />

        <TextView
            android:id="@+id/passwordReqTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:text="@string/password_req_text"
            android:layout_below="@+id/passwordConfirmEditText"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/passwordMatchStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordReqTextView"
            android:textColor="#FF0000"
            tools:text="isValid?"
            android:minLines="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioHeaderText"
            android:layout_below="@id/passwordMatchStatus"
            android:text="@string/radio_group_text"
            android:textColor="#808080"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpRadioGroup"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_below="@+id/radioHeaderText"
            android:paddingTop="5dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioDietitian"
                android:text="@string/radio_button_dietitian"
                android:layout_weight="1"
                android:textColor="#808080"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioPatient"
                android:text="@string/radio_button_patient"
                android:layout_weight="1"
                android:textColor="#808080"/>

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpButton"
            android:layout_below="@+id/signUpRadioGroup"
            android:layout_centerHorizontal="true"
            android:text="@string/signup"
            android:layout_marginTop="10dp" />

<!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existing_account"
            android:id="@+id/existingAccountLink"
            android:layout_below="@+id/signUpButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="7pt"
            android:clickable="true"
            android:focusableInTouchMode="true"/>
-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/existingAccountButton"
            android:layout_below="@+id/signUpButton"
            android:layout_centerHorizontal="true"
            android:text="@string/existing_account"
            android:layout_marginTop="10dp"
            android:singleLine="true" />

    </RelativeLayout>

</ScrollView>