<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent">

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/remove_dialog_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical"
        android:text="@string/warn_dialog_title"
        android:textColor="#fff"
        android:textSize="20sp"
        android:background="#003300"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"/>

    <TextView
        android:id="@+id/remove_dialog_message"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_below="@id/remove_dialog_text"
        android:text="@string/warn_dialog_message"
        android:textColor="#003300"
        android:textSize="16sp"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/remove_dialog_message"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/cancel_text"
            android:textColor="#111"
            android:textSize="16sp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/submit_text"
            android:textColor="#111"
            android:textSize="16sp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"/>

    </LinearLayout>

</RelativeLayout>

</FrameLayout>