<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="edu.sc.snacktrack.NewAccountActivity"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/newAccountRootView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:id="@+id/welcomeTextView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="12pt"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameEditText"
            android:layout_below="@+id/welcomeTextView"
            android:layout_marginTop="57dp"
            android:hint="@string/username_hint"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:singleLine="true"
            android:inputType="textNoSuggestions" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernameErrorStatus"
            android:layout_below="@+id/usernameEditText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#FF0000"
            tools:text="isValid?"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:layout_below="@+id/usernameErrorStatus"
            android:layout_centerHorizontal="true"
            android:hint="@string/password_hint"
            android:layout_marginTop="10dp"
            android:password="false"
            android:inputType="textPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/passwordConfirmEditText"
            android:layout_below="@+id/passwordEditText"
            android:layout_centerHorizontal="true"
            android:hint="@string/password_confirm_hint"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordErrorStatus"
            android:layout_below="@+id/passwordConfirmEditText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#FF0000"
            tools:text="isValid?"
            android:singleLine="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpButton"
            android:layout_below="@+id/passwordErrorStatus"
            android:layout_centerHorizontal="true"
            android:text="@string/signup"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exisiting_account"
            android:id="@+id/exisitingAccountLink"
            android:layout_below="@+id/signUpButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="7pt"
            android:clickable="true"
            android:focusableInTouchMode="true"/>
    </RelativeLayout>

</ScrollView>