<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FF000000">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#111">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:id="@+id/diet_group_1"
            android:text="@string/diet_set_group_1"
            android:clickable="false"
            android:longClickable="false"
            android:textColor="#FFFF"
            android:textSize="15sp"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:background="#003300" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:id="@+id/diet_separator_1"
            android:layout_below="@id/diet_group_1"
            android:background="#003300"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:id="@+id/pick_dietitian"
            android:hint="@string/pick_diet_text"
            android:background="#111"
            android:textColorHint="#cccccc"
            android:textSize="22sp"
            android:layout_below="@id/diet_separator_1"
            android:gravity="left|center_vertical"
            android:paddingLeft="20dp"
            android:clickable="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:id="@+id/diet_separator_2"
            android:layout_below="@id/pick_dietitian"
            android:background="#003300"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:id="@+id/remove_my_dietitian"
            android:hint="@string/rem_diet_text"
            android:textColorHint="#cccccc"
            android:background="#111"
            android:textSize="22sp"
            android:gravity="left|center_vertical"
            android:layout_below="@id/diet_separator_2"
            android:textColor="#FFFF"
            android:paddingLeft="20dp"
            android:clickable="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:id="@+id/diet_separator_3"
            android:layout_below="@id/remove_my_dietitian"
            android:background="#003300"/>

        <TextView
            android:id="@+id/currentDietitian"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/dietitian_username_status"
            android:textSize="20sp"
            android:textColor="#FF6666"
            android:gravity="center"
            android:background="#003300"
            android:layout_alignParentBottom="true"/>
<!--
        <Button
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:id="@+id/message_my_dietitian"
            android:hint="@string/msg_diet_text"
            android:textColorHint="#cccccc"
            android:background="#111"
            android:textSize="22sp"
            android:gravity="left|center_vertical"
            android:layout_below="@id/diet_separator_3"
            android:textColor="#FFFF"
            android:paddingLeft="20dp"
            android:clickable="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:id="@+id/diet_separator_4"
            android:layout_below="@id/message_my_dietitian"
            android:background="#003300"/>
-->
    </RelativeLayout>

</FrameLayout>