<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/chatHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:background="#A0FFFFFF">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_with"
                android:textColor="@android:color/black"
                android:textSize="10pt"/>
            <TextView
                android:id="@+id/chatWithTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="10pt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@id/chatHeader"
            android:layout_above="@+id/toSendEditTextWrapper">
            <ListView
                android:id="@+id/messageListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stackFromBottom="true"
                android:transcriptMode="alwaysScroll"
                android:divider="@android:color/transparent"
                android:focusableInTouchMode="true"
                android:clickable="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:id="@id/toSendEditTextWrapper">

            <EditText android:id="@+id/toSendEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:minLines="4"
                android:maxLines="6"
                android:background="@android:color/white"
                android:hint="@string/chat_message_hint"
                android:inputType="textMultiLine"
                android:gravity="top|left"/>
            <Button android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:text="@string/chat_send" />

        </LinearLayout>



    </RelativeLayout>

    <include layout="@layout/progress_overlay"/>

</FrameLayout>